compiler/antlr4-generated/ifccParser.cpp

// Generated from ifcc.g4 by ANTLR 4.7.2


#include "ifccVisitor.h"

#include "ifccParser.h"


using namespace antlrcpp;
using namespace antlr4;

ifccParser::ifccParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ifccParser::~ifccParser() {
  delete _interpreter;
}

std::string ifccParser::getGrammarFileName() const {
  return "ifcc.g4";
}

const std::vector<std::string>& ifccParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ifccParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- AxiomContext ------------------------------------------------------------------

ifccParser::AxiomContext::AxiomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ifccParser::GlobalVariablesContext* ifccParser::AxiomContext::globalVariables() {
  return getRuleContext<ifccParser::GlobalVariablesContext>(0);
}

std::vector<ifccParser::FunctionsContext *> ifccParser::AxiomContext::functions() {
  return getRuleContexts<ifccParser::FunctionsContext>();
}

ifccParser::FunctionsContext* ifccParser::AxiomContext::functions(size_t i) {
  return getRuleContext<ifccParser::FunctionsContext>(i);
}

ifccParser::ProgContext* ifccParser::AxiomContext::prog() {
  return getRuleContext<ifccParser::ProgContext>(0);
}


size_t ifccParser::AxiomContext::getRuleIndex() const {
  return ifccParser::RuleAxiom;
}

antlrcpp::Any ifccParser::AxiomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitAxiom(this);
  else
    return visitor->visitChildren(this);
}

ifccParser::AxiomContext* ifccParser::axiom() {
  AxiomContext *_localctx = _tracker.createInstance<AxiomContext>(_ctx, getState());
  enterRule(_localctx, 0, ifccParser::RuleAxiom);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(48);
    globalVariables();
    setState(49);
    functions();
    setState(50);
    prog();
    setState(51);
    functions();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalVariablesContext ------------------------------------------------------------------

ifccParser::GlobalVariablesContext::GlobalVariablesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ifccParser::DecGlobalContext* ifccParser::GlobalVariablesContext::decGlobal() {
  return getRuleContext<ifccParser::DecGlobalContext>(0);
}

ifccParser::GlobalVariablesContext* ifccParser::GlobalVariablesContext::globalVariables() {
  return getRuleContext<ifccParser::GlobalVariablesContext>(0);
}


size_t ifccParser::GlobalVariablesContext::getRuleIndex() const {
  return ifccParser::RuleGlobalVariables;
}

antlrcpp::Any ifccParser::GlobalVariablesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitGlobalVariables(this);
  else
    return visitor->visitChildren(this);
}

ifccParser::GlobalVariablesContext* ifccParser::globalVariables() {
  GlobalVariablesContext *_localctx = _tracker.createInstance<GlobalVariablesContext>(_ctx, getState());
  enterRule(_localctx, 2, ifccParser::RuleGlobalVariables);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(58);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);

      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(54);
      decGlobal();
      setState(55);
      match(ifccParser::T__0);
      setState(56);
      globalVariables();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlocContext ------------------------------------------------------------------

ifccParser::BlocContext::BlocContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ifccParser::StatementsContext* ifccParser::BlocContext::statements() {
  return getRuleContext<ifccParser::StatementsContext>(0);
}


size_t ifccParser::BlocContext::getRuleIndex() const {
  return ifccParser::RuleBloc;
}

antlrcpp::Any ifccParser::BlocContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitBloc(this);
  else
    return visitor->visitChildren(this);
}

ifccParser::BlocContext* ifccParser::bloc() {
  BlocContext *_localctx = _tracker.createInstance<BlocContext>(_ctx, getState());
  enterRule(_localctx, 4, ifccParser::RuleBloc);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    match(ifccParser::T__1);
    setState(61);
    statements();
    setState(62);
    match(ifccParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlocRetContext ------------------------------------------------------------------

ifccParser::BlocRetContext::BlocRetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ifccParser::StatementsContext* ifccParser::BlocRetContext::statements() {
  return getRuleContext<ifccParser::StatementsContext>(0);
}

ifccParser::RetContext* ifccParser::BlocRetContext::ret() {
  return getRuleContext<ifccParser::RetContext>(0);
}


size_t ifccParser::BlocRetContext::getRuleIndex() const {
  return ifccParser::RuleBlocRet;
}

antlrcpp::Any ifccParser::BlocRetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitBlocRet(this);
  else
    return visitor->visitChildren(this);
}

ifccParser::BlocRetContext* ifccParser::blocRet() {
  BlocRetContext *_localctx = _tracker.createInstance<BlocRetContext>(_ctx, getState());
  enterRule(_localctx, 6, ifccParser::RuleBlocRet);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(ifccParser::T__1);
    setState(65);
    statements();
    setState(66);
    ret();
    setState(67);
    match(ifccParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgContext ------------------------------------------------------------------

ifccParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ifccParser::ProgContext::INT() {
  return getToken(ifccParser::INT, 0);
}

ifccParser::BlocContext* ifccParser::ProgContext::bloc() {
  return getRuleContext<ifccParser::BlocContext>(0);
}


size_t ifccParser::ProgContext::getRuleIndex() const {
  return ifccParser::RuleProg;
}

antlrcpp::Any ifccParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

ifccParser::ProgContext* ifccParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 8, ifccParser::RuleProg);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    match(ifccParser::INT);
    setState(70);
    match(ifccParser::T__3);
    setState(71);
    match(ifccParser::T__4);
    setState(72);
    match(ifccParser::T__5);
    setState(73);
    bloc();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionsContext ------------------------------------------------------------------

ifccParser::FunctionsContext::FunctionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ifccParser::FuncDecContext* ifccParser::FunctionsContext::funcDec() {
  return getRuleContext<ifccParser::FuncDecContext>(0);
}

ifccParser::FunctionsContext* ifccParser::FunctionsContext::functions() {
  return getRuleContext<ifccParser::FunctionsContext>(0);
}


size_t ifccParser::FunctionsContext::getRuleIndex() const {
  return ifccParser::RuleFunctions;
}

antlrcpp::Any ifccParser::FunctionsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitFunctions(this);
  else
    return visitor->visitChildren(this);
}

ifccParser::FunctionsContext* ifccParser::functions() {
  FunctionsContext *_localctx = _tracker.createInstance<FunctionsContext>(_ctx, getState());
  enterRule(_localctx, 10, ifccParser::RuleFunctions);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(75);
      funcDec();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(76);
      funcDec();
      setState(77);
      functions();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);

      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDecContext ------------------------------------------------------------------

ifccParser::FuncDecContext::FuncDecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ifccParser::FuncDecContext::getRuleIndex() const {
  return ifccParser::RuleFuncDec;
}

void ifccParser::FuncDecContext::copyFrom(FuncDecContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FuncDecDefContext ------------------------------------------------------------------

ifccParser::TypeContext* ifccParser::FuncDecDefContext::type() {
  return getRuleContext<ifccParser::TypeContext>(0);
}

tree::TerminalNode* ifccParser::FuncDecDefContext::VAR() {
  return getToken(ifccParser::VAR, 0);
}

ifccParser::ArgsDecContext* ifccParser::FuncDecDefContext::argsDec() {
  return getRuleContext<ifccParser::ArgsDecContext>(0);
}

ifccParser::BlocContext* ifccParser::FuncDecDefContext::bloc() {
  return getRuleContext<ifccParser::BlocContext>(0);
}

ifccParser::FuncDecDefContext::FuncDecDefContext(FuncDecContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::FuncDecDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitFuncDecDef(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncDecStrictContext ------------------------------------------------------------------

ifccParser::TypeContext* ifccParser::FuncDecStrictContext::type() {
  return getRuleContext<ifccParser::TypeContext>(0);
}

tree::TerminalNode* ifccParser::FuncDecStrictContext::VAR() {
  return getToken(ifccParser::VAR, 0);
}

ifccParser::ArgsDecContext* ifccParser::FuncDecStrictContext::argsDec() {
  return getRuleContext<ifccParser::ArgsDecContext>(0);
}

ifccParser::FuncDecStrictContext::FuncDecStrictContext(FuncDecContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::FuncDecStrictContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitFuncDecStrict(this);
  else
    return visitor->visitChildren(this);
}
ifccParser::FuncDecContext* ifccParser::funcDec() {
  FuncDecContext *_localctx = _tracker.createInstance<FuncDecContext>(_ctx, getState());
  enterRule(_localctx, 12, ifccParser::RuleFuncDec);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(96);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<FuncDecContext *>(_tracker.createInstance<ifccParser::FuncDecDefContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(82);
      type();
      setState(83);
      match(ifccParser::VAR);
      setState(84);
      match(ifccParser::T__4);
      setState(85);
      argsDec();
      setState(86);
      match(ifccParser::T__5);
      setState(87);
      bloc();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<FuncDecContext *>(_tracker.createInstance<ifccParser::FuncDecStrictContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(89);
      type();
      setState(90);
      match(ifccParser::VAR);
      setState(91);
      match(ifccParser::T__4);
      setState(92);
      argsDec();
      setState(93);
      match(ifccParser::T__5);
      setState(94);
      match(ifccParser::T__0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncCallContext ------------------------------------------------------------------

ifccParser::FuncCallContext::FuncCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ifccParser::FuncCallContext::VAR() {
  return getToken(ifccParser::VAR, 0);
}

ifccParser::ArgsContext* ifccParser::FuncCallContext::args() {
  return getRuleContext<ifccParser::ArgsContext>(0);
}


size_t ifccParser::FuncCallContext::getRuleIndex() const {
  return ifccParser::RuleFuncCall;
}

antlrcpp::Any ifccParser::FuncCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitFuncCall(this);
  else
    return visitor->visitChildren(this);
}

ifccParser::FuncCallContext* ifccParser::funcCall() {
  FuncCallContext *_localctx = _tracker.createInstance<FuncCallContext>(_ctx, getState());
  enterRule(_localctx, 14, ifccParser::RuleFuncCall);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(ifccParser::VAR);
    setState(99);
    match(ifccParser::T__4);
    setState(100);
    args();
    setState(101);
    match(ifccParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgsDecContext ------------------------------------------------------------------

ifccParser::ArgsDecContext::ArgsDecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ifccParser::ArgsDecContext::getRuleIndex() const {
  return ifccParser::RuleArgsDec;
}

void ifccParser::ArgsDecContext::copyFrom(ArgsDecContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- LastArgDecContext ------------------------------------------------------------------

tree::TerminalNode* ifccParser::LastArgDecContext::INT() {
  return getToken(ifccParser::INT, 0);
}

tree::TerminalNode* ifccParser::LastArgDecContext::VAR() {
  return getToken(ifccParser::VAR, 0);
}

ifccParser::LastArgDecContext::LastArgDecContext(ArgsDecContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::LastArgDecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitLastArgDec(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArgsDecVarContext ------------------------------------------------------------------

tree::TerminalNode* ifccParser::ArgsDecVarContext::INT() {
  return getToken(ifccParser::INT, 0);
}

tree::TerminalNode* ifccParser::ArgsDecVarContext::VAR() {
  return getToken(ifccParser::VAR, 0);
}

ifccParser::ArgsDecContext* ifccParser::ArgsDecVarContext::argsDec() {
  return getRuleContext<ifccParser::ArgsDecContext>(0);
}

ifccParser::ArgsDecVarContext::ArgsDecVarContext(ArgsDecContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::ArgsDecVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitArgsDecVar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NoArgDecContext ------------------------------------------------------------------

ifccParser::NoArgDecContext::NoArgDecContext(ArgsDecContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::NoArgDecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitNoArgDec(this);
  else
    return visitor->visitChildren(this);
}
ifccParser::ArgsDecContext* ifccParser::argsDec() {
  ArgsDecContext *_localctx = _tracker.createInstance<ArgsDecContext>(_ctx, getState());
  enterRule(_localctx, 16, ifccParser::RuleArgsDec);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(110);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<ArgsDecContext *>(_tracker.createInstance<ifccParser::ArgsDecVarContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(103);
      match(ifccParser::INT);
      setState(104);
      match(ifccParser::VAR);
      setState(105);
      match(ifccParser::T__6);
      setState(106);
      argsDec();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<ArgsDecContext *>(_tracker.createInstance<ifccParser::LastArgDecContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(107);
      match(ifccParser::INT);
      setState(108);
      match(ifccParser::VAR);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<ArgsDecContext *>(_tracker.createInstance<ifccParser::NoArgDecContext>(_localctx));
      enterOuterAlt(_localctx, 3);

      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgsContext ------------------------------------------------------------------

ifccParser::ArgsContext::ArgsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ifccParser::ArgsContext::getRuleIndex() const {
  return ifccParser::RuleArgs;
}

void ifccParser::ArgsContext::copyFrom(ArgsContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- LastArgConstContext ------------------------------------------------------------------

tree::TerminalNode* ifccParser::LastArgConstContext::CONST() {
  return getToken(ifccParser::CONST, 0);
}

ifccParser::LastArgConstContext::LastArgConstContext(ArgsContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::LastArgConstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitLastArgConst(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArgsConstContext ------------------------------------------------------------------

tree::TerminalNode* ifccParser::ArgsConstContext::CONST() {
  return getToken(ifccParser::CONST, 0);
}

ifccParser::ArgsContext* ifccParser::ArgsConstContext::args() {
  return getRuleContext<ifccParser::ArgsContext>(0);
}

ifccParser::ArgsConstContext::ArgsConstContext(ArgsContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::ArgsConstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitArgsConst(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LastArgVarContext ------------------------------------------------------------------

tree::TerminalNode* ifccParser::LastArgVarContext::VAR() {
  return getToken(ifccParser::VAR, 0);
}

ifccParser::LastArgVarContext::LastArgVarContext(ArgsContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::LastArgVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitLastArgVar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NoArgContext ------------------------------------------------------------------

ifccParser::NoArgContext::NoArgContext(ArgsContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::NoArgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitNoArg(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArgsVarContext ------------------------------------------------------------------

tree::TerminalNode* ifccParser::ArgsVarContext::VAR() {
  return getToken(ifccParser::VAR, 0);
}

ifccParser::ArgsContext* ifccParser::ArgsVarContext::args() {
  return getRuleContext<ifccParser::ArgsContext>(0);
}

ifccParser::ArgsVarContext::ArgsVarContext(ArgsContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::ArgsVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitArgsVar(this);
  else
    return visitor->visitChildren(this);
}
ifccParser::ArgsContext* ifccParser::args() {
  ArgsContext *_localctx = _tracker.createInstance<ArgsContext>(_ctx, getState());
  enterRule(_localctx, 18, ifccParser::RuleArgs);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(121);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<ArgsContext *>(_tracker.createInstance<ifccParser::ArgsVarContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(112);
      match(ifccParser::VAR);
      setState(113);
      match(ifccParser::T__6);
      setState(114);
      args();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<ArgsContext *>(_tracker.createInstance<ifccParser::ArgsConstContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(115);
      match(ifccParser::CONST);
      setState(116);
      match(ifccParser::T__6);
      setState(117);
      args();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<ArgsContext *>(_tracker.createInstance<ifccParser::LastArgVarContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(118);
      match(ifccParser::VAR);
      break;
    }

    case 4: {
      _localctx = dynamic_cast<ArgsContext *>(_tracker.createInstance<ifccParser::LastArgConstContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(119);
      match(ifccParser::CONST);
      break;
    }

    case 5: {
      _localctx = dynamic_cast<ArgsContext *>(_tracker.createInstance<ifccParser::NoArgContext>(_localctx));
      enterOuterAlt(_localctx, 5);

      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementsContext ------------------------------------------------------------------

ifccParser::StatementsContext::StatementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ifccParser::StatementContext* ifccParser::StatementsContext::statement() {
  return getRuleContext<ifccParser::StatementContext>(0);
}

ifccParser::StatementsContext* ifccParser::StatementsContext::statements() {
  return getRuleContext<ifccParser::StatementsContext>(0);
}


size_t ifccParser::StatementsContext::getRuleIndex() const {
  return ifccParser::RuleStatements;
}

antlrcpp::Any ifccParser::StatementsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitStatements(this);
  else
    return visitor->visitChildren(this);
}

ifccParser::StatementsContext* ifccParser::statements() {
  StatementsContext *_localctx = _tracker.createInstance<StatementsContext>(_ctx, getState());
  enterRule(_localctx, 20, ifccParser::RuleStatements);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(127);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(123);
      statement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(124);
      statement();
      setState(125);
      statements();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

ifccParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ifccParser::StatementContext::getRuleIndex() const {
  return ifccParser::RuleStatement;
}

void ifccParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- StatementAffectationContext ------------------------------------------------------------------

ifccParser::AffContext* ifccParser::StatementAffectationContext::aff() {
  return getRuleContext<ifccParser::AffContext>(0);
}

ifccParser::StatementAffectationContext::StatementAffectationContext(StatementContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::StatementAffectationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitStatementAffectation(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BoucleIfContext ------------------------------------------------------------------

ifccParser::IfLoopContext* ifccParser::BoucleIfContext::ifLoop() {
  return getRuleContext<ifccParser::IfLoopContext>(0);
}

ifccParser::BoucleIfContext::BoucleIfContext(StatementContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::BoucleIfContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitBoucleIf(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatementReturnContext ------------------------------------------------------------------

ifccParser::RetContext* ifccParser::StatementReturnContext::ret() {
  return getRuleContext<ifccParser::RetContext>(0);
}

ifccParser::StatementReturnContext::StatementReturnContext(StatementContext *ctx) { copyFrom(ctx); }

antlrcpp::Any ifccParser::StatementReturnContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ifccVisitor*>(visitor))
    return parserVisitor->visitStatementReturn(this);
  else
    return visitor->visitChildren(this);
}
//----------------- StatementDeclarationContext ------------------------------------------------------------------

ifccParser::DecContext* ifccParser::StatementDeclarationContext::dec() {
  return getRuleContext<ifccParser::DecContext>(0);
}

ifccParser::StatementDeclarationContext::StatementDeclarationContext(StatementContext *ctx) { copyFrom(ctx); }
